@@ -379,6 +379,7 @@ BA140- Prototype code 'b' and default 'realbitprecision'
   141- \pb shortcut [ manipulate realbitprecision ]
 BA142- [GP] Map, matget, mapput, mapisdefined, mapdelete
 BA143- [GP] bitprecision
+BA143- [arm64] add aarch64 assembly kernel
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
